src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVInternalformatSampleQuery_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVInternalformatSampleQuery_StringErrorContext.class */
public final class NVInternalformatSampleQuery_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglGetInternalformatSampleivNV(IIIIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVInternalformatSampleQueryErrorContext");
        methods.put("glGetInternalformatSampleivNV(IIIILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVInternalformatSampleQueryErrorContext");
        methods.put("glGetInternalformatSampleivNV(IIII[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVInternalformatSampleQueryErrorContext");
        return methods;
    }
}
